--- a/FrontEnd/src/Components/CartProperty/cartProperty.scss
+++ b/FrontEnd/src/Components/CartProperty/cartProperty.scss
@@ -66,7 +66,7 @@
         }
     }
 }
-.cartProperty-productBox{
+.cart-product{
     display: flex;
     gap: 12px;
     margin-top: 32px;
@@ -79,13 +79,13 @@
         object-fit: contain;
     }
 }
-.cartProperty-productProperty{
+.cart-productProperty{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
 }
-.cartProperty-productContent{
+.cart-productContent{
     display: flex;
     flex: 1;
 
@@ -93,13 +93,13 @@
         width: 245px;
     }
 }
-.cartProperty-productQuantity{
+.cart-productQuantity{
     display: flex;
     align-items: center;
     gap: 50px;
     margin-left: 50px;
 }
-.cartProperty-productCount{
+.cart-productCount{
     position: relative;
     >input{
         width: 70px;
@@ -122,7 +122,7 @@
         padding: 1px 6px;
     }
 }
-.cartProperty-moneySum{
+.cart-moneySum{
     display: flex;
     align-items: baseline;
     gap: 16px;
@@ -204,4 +204,7 @@
             color: var(--primary-color);
         }
     }
+}
+.cartImg-center{
+    text-align: center;
 }
