--- a/FrontEnd/src/Components/DetailCate/detailCate.scss
+++ b/FrontEnd/src/Components/DetailCate/detailCate.scss
@@ -75,3 +75,6 @@ position: relative;
 .detailCate-filterSelect:hover .detailCate-filterList{
     display: flex;
 }
+.detailCate-product{
+    margin-top: 20px;
+}
