--- a/FrontEnd/src/Components/Product/product.scss
+++ b/FrontEnd/src/Components/Product/product.scss
@@ -4,7 +4,7 @@
     width: 100%;
 }
 .productItem{
-    display: inline-block;
+    display: flex;
     text-decoration: none;
     color: #000;
     background: #fff;
@@ -12,8 +12,7 @@
     border-radius: 10px;
     transition: transform linear 0.1s;
     margin-bottom: 10px;
-    min-height: 378px;
-    min-width: 292px;
+    flex-direction: column;
 }
 .productItem:hover{
     box-shadow: 0px 0px 5px 2px var(--primary-color);
@@ -41,6 +40,19 @@
     align-items: center;
     margin: 0 10px 8px;
     font-size: 1.4rem;
+}
+.product-sell{
+    >span{
+        &:nth-child(2){
+            display: flex;
+            align-items: flex-end;
+        }
+    }
+}
+.product-rate{
+    >span{
+        text-align: right;
+    }
 }
 .product-rating{
     color: var(--primary-color);
