--- a/FrontEnd/src/Components/CartProperty/cartProperty.scss
+++ b/FrontEnd/src/Components/CartProperty/cartProperty.scss
@@ -100,7 +100,8 @@
     display: flex;
     align-items: center;
     gap: 50px;
-    margin-left: 50px;
+    margin-left: 120px;
+    width: 100%;
 }
 .cart-productCount{
     position: relative;
@@ -129,6 +130,8 @@
     display: flex;
     align-items: baseline;
     gap: 16px;
+    width: 100%;
+    justify-content: flex-end;
 
     >span{
         &:nth-child(2){
