--- a/FrontEnd/src/Components/Header/header.scss
+++ b/FrontEnd/src/Components/Header/header.scss
@@ -66,9 +66,16 @@
     width: 60px;
     height: 60px;
     color: var(--primary-color);
+    cursor: pointer;
+    &:hover{
+        opacity: 0.8;
+    }
 
-    &:nth-of-type(1){
+    &:first-child{
         margin: 0 16px 0 20px;
+    }
+    &:last-child{
+        margin-left: 16px;
     }
 }
 .headerNav-item{
@@ -122,7 +129,7 @@
 }
 .headerNav-cart{
     position: relative;
-    width: 60px;
+
 
     >span{
         position: absolute;
@@ -131,7 +138,7 @@
         background-color: #fff;
         border-radius: 50%;
         top: 2px;
-        right: -22px;
+        right: 10px;
         font-size: 1.4rem;
         text-align: center;
         line-height: 24px;
