--- a/FrontEnd/src/Components/PaymentAuctionProperty/paymentAuctionProperty.scss
+++ b/FrontEnd/src/Components/PaymentAuctionProperty/paymentAuctionProperty.scss
@@ -59,15 +59,6 @@
     padding: 10px;
     font-size: 1.8rem;
     height: 100px;
-    width: 90%;
-    }
-    >span{
-        display: flex;
-    justify-content: flex-start;
-    padding-left: 40px;
-    &:last-child{
-        padding-bottom: 10px;
-    }
     }
 }
 .paymentProperty-productBrand{
@@ -167,7 +158,7 @@
 }
 .paymentProperty-comfirm{
     background: #fff;
-    box-shadow: 0px 0px 5px #DC5B0E;
+    box-shadow: 0px 0px 5px var(--primary-color);
     border-radius: 10px;
     padding: 20px;
     height: max-content;
