--- a/FrontEnd/src/Components/ProductPay/productPay.scss
+++ b/FrontEnd/src/Components/ProductPay/productPay.scss
@@ -64,6 +64,20 @@
     padding: 24px 40px;
     margin-bottom: 24px;
 }
+.productPay-item{
+    >button{
+        padding: 10px;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--primary-color);
+    color: #fff;
+    font-size: 2rem;
+    &:hover{
+        cursor: pointer;
+        opacity: 0.8;
+    }
+    }
+}
 .productPay-header{
     display: flex;
     align-items: center;
@@ -143,7 +157,7 @@
     align-items: center;
     font-size: 2.6rem;
     font-family: 'Oswald';
-    margin-bottom: 20px;
+    margin: 20px 0;
     &:last-child{
         margin-bottom: 0;
     }
