--- a/FrontEnd/src/Components/ProductSell/productSell.scss
+++ b/FrontEnd/src/Components/ProductSell/productSell.scss
@@ -114,7 +114,7 @@
     border-radius: 5px;
     padding: 4px;
     cursor: pointer;
-    width: 84px;
+    min-width: 84px;
     height: 28px;
     text-align: center;
     color: #000;
