--- a/FrontEnd/src/Components/ProfileShop/profileShop.scss
+++ b/FrontEnd/src/Components/ProfileShop/profileShop.scss
@@ -123,7 +123,7 @@
         background: #FFFFFF;
         border: 1px solid var(--primary-color);
         border-radius: 5px;
-        margin-right: 20px;
+        margin: 0 20px 10px 0;
         &:hover{
             cursor: pointer;
         }
