--- a/admin/src/Components/ManageCategory/manageCategory.scss
+++ b/admin/src/Components/ManageCategory/manageCategory.scss
@@ -1,8 +1,9 @@
-.manageCategory{
+.manageCategory-container{
     display: flex;
     align-items: center;
     gap: 30px;
     flex-wrap: wrap;
+    margin-bottom: 40px;
     >button{
         padding: 5px 10px;
         font-size: 2rem;
@@ -121,5 +122,46 @@
                 background-color: var(--primary-color);
             }
         }   
+    }
+}
+.manageCategory-create{
+    display: flex;
+    flex-direction: column;
+    >span{
+        text-align: center;
+        font-size: 2.4rem;
+        font-family: 'Oswald';
+        margin-bottom: 10px;
+    }
+}
+.manageCategory-input{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    >input{
+        font-size: 2rem;
+        outline: none;
+        border: 1px solid var(--primary-color);
+        border-radius: 4px;
+        padding: 5px 10px;
+    }
+    >button{
+        width: 100px;
+        font-size: 2.4rem;
+        border: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: rgba(255, 255, 255, 0.7);
+            box-shadow: inset 0px 0px 4px var(--primary-color);
+            border-radius: 50px;
+            color: var(--sub-color);
+            padding: 5px 10px;
+            &:hover{
+                cursor: pointer;
+                color: var(--primary-color);
+            }
+        
     }
 }
