--- a/FrontEnd/src/Components/ProductSell/productSell.scss
+++ b/FrontEnd/src/Components/ProductSell/productSell.scss
@@ -188,6 +188,7 @@
         border-radius: 10px;
         background-color: #FFF;
         color: var(--primary-color);
+        margin-right: 10px;
     }
     &:last-child{
         width: 260px;
