--- a/FrontEnd/src/Components/ProductPay/productPay.scss
+++ b/FrontEnd/src/Components/ProductPay/productPay.scss
@@ -135,6 +135,12 @@
         object-fit: contain;
     }
 }
+.productPay-body{
+    margin-top: 20px;
+    &:last-child{
+        margin-top: 0;
+    }
+}
 .productPay-bodyText{
     display: flex;
     flex-direction: column;
@@ -157,10 +163,7 @@
     align-items: center;
     font-size: 2.6rem;
     font-family: 'Oswald';
-    margin: 20px 0;
-    &:last-child{
-        margin-bottom: 0;
-    }
+    margin-top: 20px;
 
     >span{
         &:nth-child(2){
@@ -257,7 +260,8 @@
     justify-content: center;
 }
 .modalComment-container{
-    min-height: 676px;
+    // min-height: 676px;
+    position: relative;
     background: #fff;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
