--- a/FrontEnd/src/Components/WalletManage/walletManage.scss
+++ b/FrontEnd/src/Components/WalletManage/walletManage.scss
@@ -60,7 +60,9 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    width: 100%;
     >span{
+        width: calc(100% / 2);
         text-align: center;
         font-size: 2.6rem;
         margin: 12px 54px;
@@ -115,10 +117,11 @@
     display: flex;
     align-items: center;
     gap: 24px;
-    
+
 
     >button{
-       
+        width: 180px;
+        height: 40px;
         background-color: rgba(220, 91, 14, 0.5);
         border-radius: 5px;
         border: none;
@@ -131,8 +134,6 @@
     }
 }
 .walletManage-input{
-    width: 100%;
-    height: 40px;
     background-color: #FFF;
     border: 1px solid #DC5B0E;
     box-shadow: inset 0px 0px 4px rgba(220, 91, 14, 0.5);
@@ -142,26 +143,6 @@
     gap: 6px;
     overflow: hidden;
     padding-right: 12px;
-    >form{
-        display: flex;
-        gap: 20px;
-        >input{
-            font-size: 2rem;
-            outline: none;
-            border: none;
-            padding: 5px 10px;
-            &:nth-child(2){
-                background-color: var(--primary-color);
-                border-radius: 10px;
-                width: 100px;
-                cursor: pointer;
-                color: #fff;
-                &:hover{
-                    opacity: 0.8;
-                }
-            }
-        }
-    }
 
     >input{
         width: 356px;
